spec/task1/21_http_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: testapp-1-route
  namespace: task-1
spec:
  parentRefs:
    - name: main-gw
      namespace: basic-gw 
  hostnames:
    - testapp1.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: testapp-1-svc
          port: 8081
